# FUTURE

./: .gitignore  LICENSE  main.py  pyproject.toml
experiments/: model_creating.ipynb
repository/: parameters.py
results/experiments/: E1_raw_cnn_baseline_FordA.json  E2_stat_mlp_compact_FordA.json  E2_stat_mlp_windows_FordA.json  E3_raw_stats_concat_compact_FordA.json  E3_raw_stats_concat_windows_FordA.json  E4_gaf_cnn_FordA.json  E4_mtf_cnn_FordA.json  E4_stft_cnn_FordA.json
src/data/: __init__.py  data.py
src/image_transformation/: image_transformer.py  test.ipynb  transformation_mapping.py  usefull_transformations.py
src/image_transformation/methods/: gaf_transformation.py  mtf_transformation.py  stft_transformation.py
src/metrics/: metrics.py
src/models/: __init__.py  cnn_encoder.py  gaf_encoder.py  mtf_encoder.py  raw_stats_concat.py  stats_encoder.py  stft_encoder.py
src/statistical/: __init__.py  hankel.py  quantile_extractor.py  stat_features.py
tests/: test_gaf.py  test_image_transformer.py  test_mtf.py  test_quantile_extractor.py  test_statistical_hankel.py  test_stft.py
